# MMOLB_v2

./: .gitignore  Spicy_Chicken_Crunchwraps_export_061025_1327  active_player_attributes.json  asdf_games.json  asdf_teams.json  asdfasdf_teams.json  attribute_regression.py  attribute_scraper.py  attributes_db.json  attributes_db_export_080125_1932.csv  attributes_db_export_082725_1644.csv  attributes_db_export_100625_1452.csv  attributes_db_export_100625_1455.csv  boon_bonuses.csv  boon_bonuses.json  boon_multipliers.json  boons.py  boons_v2.py  calendar.json  chicken_scout_reports.json  derived_stats.json  find_games.py  game_data.py  games.json  inv_team_data.json  inventory.json  inventory_hardcode.json  inventory_mgmt.py  inventory_mgmt_v2.py  inventory_v2.json  json_explorer.py  main.py  performance_db.json  performance_db_export_080125_1927.csv  performance_db_export_082725_1644.csv  performance_scraper.py  player_attributes.json  pyproject.toml  reroll_appraisal.py  scouting_report.py  (+8 more)
MMOLB/: __init__.py  analysis.py  api.py  deep_frier.py  interleague.py  league.py  player.py  stat_calcs.py  team.py  utils.py
archive/: asdf_derived_stats.json  attribute_regression.py  boons.py  game_data.py  local_team_data.py  player_attributes_heatmap.py  player_draft_attributes.json  response_options.txt  s1_teams.json  spicy_chicken_stats.py  teams_archived_06182025.json  visualization.py
boon_effect_exports/: Boots May_6841e93ef7b5d3bf791d6ce0_boon_detail_pct.csv  Boots May_6841e93ef7b5d3bf791d6ce0_boon_ranking_pct.csv  era_export.csv  fip_export.csv  obp_export.csv  (+14 more)
(+63 files in other folders)
